# RAGDA

./: API_REDESIGN.md  API_REDESIGN_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ARCHITECTURE.md  MANIFEST.in  Readme.md  gitignore  pyproject.toml  ragda_optimal_defaults.json  requirements.txt  setup.py  test_adapters_smoke.py  test_dynamic_quick.py  test_highdim_quick.py  test_kwargs_debug.py  test_quick.py  test_subprocess.py
RAGDA Research/: Readme_Benchmarking.md  paper_template_maybeOLD.tex
RAGDA_default_args/: CURRENT_STATUS.md  META_OPTIMIZER_DEBUG_SUMMARY.md  PHASE_7_IMPLEMENTATION_PLAN.md  STEP3_INSERT.md  auc_metric.py  audit_problems.py  benchmark_comprehensive.py  benchmark_functions.py  benchmark_ml_problems.py  benchmark_realworld_problems.py  benchmark_realworld_problems_OLD.py  check_categories.py  classify_all_problems.py  debug_problems.py  fill_benchmark_gaps.py  meta_optimizer.py  parameter_audit.py  problem_classifications_cache.json  problem_classifier.py  ragda_optimal_defaults.json  ragda_parameter_space.py  test_marsopt_debug.py  test_meta_simple.py  verify_step2_complete.py
RAGDA_default_args/archive/: benchmark_comprehensive.py  debug_marsopt.py  meta_optimizer.py  problem_classifier.py
RAGDA_research/: generate_paper.py
docs/: MIGRATION_GUIDE_FOR_AI.md
examples/: basic_optimization.py  mixed_parameter_types.py  optuna_style_api.py  scipy_style_api.py
ragda/: __init__.py  api_adapters.py  api_compat.py  constraints.py  core.c  core.cp311-win_amd64.pyd  core.pyx  highdim.py  highdim_core.c  highdim_core.cp311-win_amd64.pyd  highdim_core.pyx  optimizer.py  result.py  space.py
ragda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_api_consistency.py  test_api_integration.py  test_api_optuna.py  test_api_scipy.py  test_constraints.py  test_core.py  test_dynamic_workers.py  test_highdim.py  test_integration.py  test_integration_optuna.py  test_integration_scipy.py  test_kwargs_unpacking.py  test_optimizer.py  test_optimizer_constraints.py  test_phase7_meta_optimizer.py  test_space_new_api.py
